More changes to SEA

--- a/main_menu/localization/english/1444_country_names_l_english.yml
+++ b/main_menu/localization/english/1444_country_names_l_english.yml
@@ -7,8 +7,8 @@
  SRY_ADJ: "Yughur"
  TUO: "Turmot"
  TUO_ADJ: "Turmot"
- YRK: "Yarkand"
- YRK_ADJ: "Yarkand"
+ YRK: "Yarkent"
+ YRK_ADJ: "Yarkent"
  MUA: "Lan Xang"
  MUA_ADJ: "Lan Xangian"
  CHG: "Moghulistan"
