--- a/main_menu/localization/english/1444_country_names_l_english.yml
+++ b/main_menu/localization/english/1444_country_names_l_english.yml
@@ -1,18 +1,17 @@
 l_english:
-TIM: "Timurids"
-TIM_ADJ: "Timurid"
-TIM_LONG: "Timurid Empire" 
-TIH: "Herat Timurids"
-TIH_ADJ: "Timurid"
+TIM:0 "Timurids"
+TIM_ADJ:0 "Timurid"
+TIH:0 "Herat Timurids"
+TIH_ADJ:0 "Timurid"
 TIS:0 "Samarkand Timurids"
-TIS_ADJ: "Timurid"
-TTK: "Balkh Timurids"
-TTK_ADJ: "Timurid"
-TIG: "Gurgan Timurids"
-TIG_ADJ: "Timurid"
-TIF: "Fars Timurids"
-TIF_ADJ: "Timurid"
-TIK: "Kabul Timurids"
-TIK_ADJ: "Timurid"
-TII: "Irak-i Ajam Timurids"
-TII_ADJ: "Timurid"
+TIS_ADJ:0 "Timurid"
+TTK:0 "Balkh Timurids"
+TTK_ADJ:0 "Timurid"
+TIG:0 "Gurgan Timurids"
+TIG_ADJ:0 "Timurid"
+TIF:0 "Fars Timurids"
+TIF_ADJ:0 "Timurid"
+TIK:0 "Kabul Timurids"
+TIK_ADJ:0 "Timurid"
+TII:0 "Irak-i Ajam Timurids"
+TII_ADJ:0 "Timurid"
