--- a/main_menu/localization/english/zz_1444_country_names_l_english.yml
+++ b/main_menu/localization/english/zz_1444_country_names_l_english.yml
@@ -22,3 +22,5 @@
  AFG_f_desc: "Situated from our strongholds high in the Hindu Kush we have united the regional tribes under our banner. Though our lands are poor and barren, we have the will to endure and prosper."
  timurid_prince: "Timurid Prince"
  timurid_prince_desc: "Descendant of the great conqueror Tamerlane. Our right to succession is contested by our cousins, but we may still prove our right through arms"
+ TIX: "Timurid"
+ TIX_ADJ: "Timurids"
