--- a/main_menu/localization/english/zz_1444_country_names_l_english.yml
+++ b/main_menu/localization/english/zz_1444_country_names_l_english.yml
@@ -65,7 +65,11 @@
  MAB_ADJ: "Maduri"
  ZMR: "Calicut"
  ZMR_ADJ: "Calicuti"
+ DBD: "Kotte"
+ DBD_ADJ: "Kotte"
  KAY: "Kandy"
  KAY_ADJ: "Kandian"
  MYS: "Mysore"
  MYS_ADJ: "Mysori"
+ RCH: "Teligana"
+ RCH_ADJ: "Teliganani"
